@@ -39,4 +39,53 @@
             </tbody>
         </table>
     </div>
+    <div id="connections" class="panel panel-primary">
+        <div class="panel-heading"><span class="glyphicon glyphicon-transfer"></span> Connections</div>
+        <table class="table table-striped table-condensed table-hover">
+            <thead>
+                <tr>
+                    <th>FD</th>
+                    <th>PID</th>
+                    <th>Family</th>
+                    <th>Type</th>
+                    <th>Local address</th>
+                    <th>Remote address</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for c in net_connections %}
+                <tr>
+                    <td>
+                        {{ c.fd if c.fd > 0 else "-" }}
+                    </td>
+                    <td>
+                        {% if c.pid %}
+                            <a href="{{ url_for(".process", pid=c.pid) }}">{{ c.pid }}</a>
+                        {% else %}
+                            -
+                        {% endif %}
+                    </td>
+                    <td>{{ socket_families[c.family] }}</td>
+                    <td>{{ socket_types[c.type] }}</td>
+                    <td>
+                        {% if c.laddr[0] and c.laddr[1] %}
+                            {{ c.laddr[0] }}:{{ c.laddr[1] }}
+                        {% else %}
+                            -
+                        {% endif %}
+                    </td>
+                    <td>
+                        {% if c.raddr[0] and c.raddr[1] %}
+                            {{ c.raddr[0] }}:{{ c.raddr[1] }}
+                        {% else %}
+                            -
+                        {% endif %}
+                    </td>
+                    <td>{{ c.status }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
